tests/ui/non_input_lifetime.stderr
error: Lifetime on output relation without any input relations having a lifetime
  --> tests/ui/non_input_lifetime.rs:14:22
   |
14 |         struct Output<'a>(&'a u32);
   |                      ^^^^
